<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false"
        android:background="@android:color/darker_gray"
        android:id="@+id/welcomeMainLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textview_welcome_title"
            android:id="@+id/textViewWelcome"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_welcome_need_account"
            android:id="@+id/textViewNeedAccount"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_welcome_register"
            android:id="@+id/buttonGoToRegister"
            android:layout_gravity="center"
            android:background="#ff0000ff"
            android:textColor="@android:color/darker_gray"
            android:clickable="true"
            android:enabled="true"
            android:onClick="onButtonGoToRegisterUserRegistrationClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_welcome_have_account"
            android:id="@+id/textViewHaveAccount"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_welcome_login"
            android:id="@+id/buttonGoToLogin"
            android:layout_gravity="center_horizontal"
            android:background="#ff0000ff"
            android:textColor="@android:color/darker_gray"
            android:enabled="true"
            android:clickable="true"
            android:onClick="onButtonGoToLoginClick" />


    </LinearLayout>

</RelativeLayout>
