<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.swhittier.accountmanagement.UserLogin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignWithParentIfMissing="false"
    android:background="@android:color/darker_gray"
    android:id="@+id/userLoginMainLayout"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textview_login_title"
        android:id="@+id/textViewLoginTitle"
        android:inputType="none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_login_message"
        android:id="@+id/textViewLoginMessage"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_login_user_name_title"
        android:id="@+id/textViewLoginUserNameTitle"
        android:textSize="18sp"
        android:layout_gravity="left"
        android:paddingLeft="5dp"
        android:layout_marginLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLoginUserName"
        android:background="@android:color/background_light"
        android:layout_weight="0.05"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_login_password_title"
        android:id="@+id/textViewLoginPassword"
        android:textSize="18sp"
        android:paddingLeft="5dp"
        android:layout_marginLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLoginPassword"
        android:background="@android:color/background_light"
        android:layout_weight="0.05"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/buttonLogin"
        android:layout_gravity="center_horizontal"
        android:background="#ff0000ff"
        android:textColor="@android:color/darker_gray"
        android:enabled="true"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:onClick="onButtonLogInClick" />

</LinearLayout>
